<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameTxt" />

    <EditText
        android:id="@+id/nameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nameTxt"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/plecTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexTxt" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/sexChoose" />

    <TextView
        android:id="@+id/ageTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ageTxt" />

    <EditText
        android:id="@+id/ETAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:ems="10"
        android:hint="@string/ageHint"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:singleLine="true" />

    <Button
        android:id="@+id/okBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="okClicked"
        android:text="@string/okInfo" />

    <TextView
        android:id="@+id/infoTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>